tests/ui/eii/ice_contract_attr_on_eii_generated_item.stderr
error: contract annotations is only supported in functions with bodies
  --> $DIR/ice_contract_attr_on_eii_generated_item.rs:8:1
   |
LL | #[core::contracts::ensures]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: contract annotations can only be used on functions
  --> $DIR/ice_contract_attr_on_eii_generated_item.rs:8:1
   |
LL | #[core::contracts::ensures]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find value `implementation` in module `self`
  --> $DIR/ice_contract_attr_on_eii_generated_item.rs:11:4
   |
LL | fn implementation() {}
   |    ^^^^^^^^^^^^^^ not found in `self`

warning: the feature `contracts` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/ice_contract_attr_on_eii_generated_item.rs:4:12
   |
LL | #![feature(contracts)]
   |            ^^^^^^^^^
   |
   = note: see issue #128044 <https://github.com/rust-lang/rust/issues/128044> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0425`.
